<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.Background"
        tools:context=".AppSettingActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".3" />

        <RadioGroup
            android:id="@+id/themegroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_guideline">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/theme_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25dp"
                android:text="@string/dark_theme"
                android:textColor="@color/textcolorprimary" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/theme_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25dp"
                android:text="@string/light_theme"
                android:textColor="@color/textcolorprimary" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/theme_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25dp"
                android:text="@string/system_default_theme"
                android:textColor="@color/textcolorprimary" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>